@@ -15,17 +15,14 @@ stop_cmd=":"
 mdinit_start()
 {
 	if [ -f /.usr.tar.xz ]; then
-		/sbin/mdmfs -s 96M md /usr
+		/sbin/mount -t tmpfs tmpfs /usr
 		/rescue/xz -d -c /.usr.tar.xz | /rescue/tar -x -C / -f -
 	elif [ -f /.usr.tar.bz2 ]; then
-		/sbin/mdmfs -s 96M md /usr
+		/sbin/mount -t tmpfs tmpfs /usr
 		/rescue/bzip2 -d -c /.usr.tar.bz2 | /rescue/tar -x -C / -f -
 	elif [ -f /.usr.tar.gz ]; then
-		/sbin/mdmfs -s 96M md /usr
+		/sbin/mount -t tmpfs tmpfs /usr
 		/rescue/gzip -d -c /.usr.tar.gz | /rescue/tar -x -C / -f -
-	else
-		MD=`/sbin/mdconfig -a -t vnode -f /.usr.uzip`
-		/sbin/mount -r /dev/${MD}.uzip /usr
 	fi
 }
 
